--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -9,9 +9,11 @@ jobs:
       - name: Download wheels for Linux + Py3.10
         run: |
           python -m pip install --upgrade pip
-          pip download -d wheels --only-binary=:all: \
+          pip download -d wheels \
+              --only-binary=:all: --no-binary=bblfsh \
               --platform manylinux2014_x86_64 --implementation cp \
-              --python-version 310 --abi cp310 -r requirements.txt
+              --python-version 310 --abi cp310 \
+              -r requirements.txt
           tar -czf wheels-linux310.tar.gz wheels
       - uses: actions/upload-artifact@v4
         with:
