--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -6,16 +6,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Download wheels for Linux + Py3.10
+
+      - name: Download Linux wheels (Py3.10)
         run: |
           python -m pip install --upgrade pip
           pip download -d wheels \
-              --only-binary=:all: --no-binary=bblfsh \
-              --platform manylinux2014_x86_64 --implementation cp \
-              --python-version 310 --abi cp310 \
-              -r requirements.txt
+            --only-binary=:all: \
+            --platform manylinux2014_x86_64 \
+            --implementation cp --python-version 310 --abi cp310 \
+            -r requirements.txt
           tar -czf wheels-linux310.tar.gz wheels
-      - uses: actions/upload-artifact@v4
+
+      - uses: actions/upload-artifact@v3
         with:
           name: linux-wheels
           path: wheels-linux310.tar.gz
