--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,13 +1,14 @@
 name: build-linux-wheels
-on: workflow_dispatch           # 手动触发
+on: workflow_dispatch        # 网页手动点击 ▶️ 触发
 
 jobs:
   wheels:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download Linux wheels (Py3.10)
+      - name: Download Linux wheels (Python 3.10)
         run: |
           python -m pip install --upgrade pip
           pip download -d wheels \
@@ -17,7 +18,7 @@ jobs:
             -r requirements.txt
           tar -czf wheels-linux310.tar.gz wheels
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4   # ← 统一 v4
         with:
           name: linux-wheels
           path: wheels-linux310.tar.gz
