--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,23 +1,27 @@
-name: build-linux-wheels
-on: workflow_dispatch        # 网页手动点击 ▶️ 触发
+name: linux310-wheels
+on: workflow_dispatch          # 手动触发
 
 jobs:
   wheels:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download Linux wheels (Python 3.10)
+      # 1) 在官方 python:3.10 容器里下载所有 wheel
+      - name: Collect wheels inside python:3.10 container
         run: |
-          python -m pip install --upgrade pip
-          pip download -d wheels \
-            --only-binary=:all: --no-binary bblfsh \
-            --platform manylinux2014_x86_64 --implementation cp \
-            --python-version 310 --abi cp310 -r requirements.txt
-          tar -czf wheels-linux310.tar.gz wheels
+          docker run --rm \
+            -v "$PWD:/work" -w /work \
+            python:3.10 \
+            bash -c "pip install -U pip && \
+                     pip download -d wheels --only-binary=:all: -r requirements.txt"
 
-      - uses: actions/upload-artifact@v4   # ← 统一 v4
+      # 2) 打包
+      - name: Tar wheels
+        run: tar -czf wheels-linux310.tar.gz wheels
+
+      # 3) 上传 artifact
+      - uses: actions/upload-artifact@v4
         with:
           name: linux-wheels
           path: wheels-linux310.tar.gz
