--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,5 +1,5 @@
-name: linux310-wheels
-on: workflow_dispatch          # 手动触发
+name: linux38-wheels
+on: workflow_dispatch
 
 jobs:
   wheels:
@@ -7,21 +7,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # 1) 在官方 python:3.10 容器里下载所有 wheel
-      - name: Collect wheels inside python:3.10 container
+      - name: Collect wheels inside python:3.8 container
         run: |
-          docker run --rm \
-            -v "$PWD:/work" -w /work \
-            python:3.10 \
-            bash -c "pip install -U pip && \
-                     pip download -d wheels --only-binary=:all: -r requirements.txt"
+          docker run --rm -v "$PWD:/work" -w /work \
+            python:3.8-slim bash -c "
+              pip install -U pip &&
+              pip download -d wheels --only-binary=:all: -r requirements.txt"
+          tar -czf wheels-linux38.tar.gz wheels
 
-      # 2) 打包
-      - name: Tar wheels
-        run: tar -czf wheels-linux310.tar.gz wheels
-
-      # 3) 上传 artifact
       - uses: actions/upload-artifact@v4
         with:
-          name: linux-wheels
-          path: wheels-linux310.tar.gz
+          name: linux-wheels38
+          path: wheels-linux38.tar.gz
