--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
 bblfsh==4.2.0
+certifi==2025.7.9
+charset-normalizer==3.4.2
+docker==7.1.0
+grpcio==1.73.1
+grpcio-tools==1.73.1
+idna==3.10
+protobuf==3.20.3
+requests==2.32.4
+urllib3==2.5.0
